@@ -19,5 +19,35 @@ module Sequel
       end
       respond_to?(m) ? send(m, *args, &block) : super(m, *args)
     end
+
+    def self.create_with_params(params)
+      deprecate("Sequel::Model.create_with_params", "Use .create")
+      create(params)
+    end
+
+    def self.create_with(params)
+      deprecate("Sequel::Model.create_with", "Use .create")
+      create(params)
+    end
+
+    def update_with(params)
+      deprecate("Sequel::Model#update_with", "Use #update_with_params")
+      update_with_params(params)
+    end
+
+    def new_record?
+      deprecate("Sequel::Model#new_record?", "Use #new?")
+      new?
+    end
+
+    def set(values)
+      deprecate("Sequel::Model#set", "Use #update_values")
+      update_values(values)
+    end
+
+    def update(values)
+      deprecate("Sequel::Model#update", "Use #update_values")
+      update_values(values)
+    end
   end
 end
