@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate .create_with_params, .create_with, #set, #update, #update_with, and #new_record from Sequel::Model (jeremyevans)
+
 * Add Model.def_dataset_method, for defining methods on the model that reference methods on the dataset (jeremyevans)
 
 * Deprecate Model.method_missing, add dataset methods to Model via metaprogramming (jeremyevans)
